# ManiSDP-matlab

./: .gitignore  README_python.md  pyproject.toml
example_python/: draft01.ipynb  draft01.py
python/manisdp/: __init__.py  _onlyunitdiag.py  _unittrace.py
